# ai-vid-detection

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: linux-rocm.md  macos-mintime.md
scripts/: setup_app_env.sh  setup_mintime_mac.sh  setup_mintime_rocm.sh
src/ai_video_detector/: __init__.py  api.py  cli.py  config.py  deepfake_model.py  heuristics.py  llm.py  models.py  pipeline.py  presentation.py  video.py
static/: styles.css
templates/: index.html
tests/: test_deepfake_model.py  test_heuristics.py  test_pipeline.py
